Changes
-------

0.2.2 (09-26-2017)
^^^^^^^^^^^^^^^^^^

* Rustup to 1.22.0-nightly 2017-09-30


0.2.1 (09-26-2017)
^^^^^^^^^^^^^^^^^^

* Fix rustc const_fn nightly breakage


0.2.0 (08-12-2017)
^^^^^^^^^^^^^^^^^^

* Added inheritance support #15

* Added weakref support #56

* Allow to add gc support without implementing PyGCProtocol #57

* Refactor `PyErr` implementation. Drop `py` parameter from constructor.

* Added subclass support #64

* Added `self.__dict__` supoort #68

* Added `pyo3::prelude` module #70

* Better `Iterator` support for PyTuple, PyList, PyDict #75

* Introduce IntoPyDictPointer similar to IntoPyTuple #69


0.1.0 (07-23-2017)
^^^^^^^^^^^^^^^^^^

* Initial release