@@ -10,8 +10,8 @@ use regex::Regex;
 use version_check::{supports_features, is_min_version, is_min_date};
 
 // Specifies the minimum nightly version needed to compile pyo3.
-const MIN_DATE: &'static str = "2017-09-30";
-const MIN_VERSION: &'static str = "1.22.0-nightly";
+const MIN_DATE: &'static str = "2017-11-07";
+const MIN_VERSION: &'static str = "1.23.0-nightly";
 
 #[derive(Debug)]
 struct PythonVersion {
